# ZeldaClassic

./: .git-blame-ignore-revs  .gitignore  .lfsconfig  .sentryclirc.txt  CMakeLists.txt  CONTRIBUTING  README.md  ag_nofull.cfg  build_emscripten.sh  build_wasm.sh  changelog.txt  cmake_install.cmake  enhance-source-map.js  index.html  requirements.txt  zc_icon.rc  zl_icon.rc  zq_icon.rc
.github/workflows/: build.yml  ci.yml  compare.yml  coverage.yml  install-breakpad.sh  print-release-name-vars.py  release.yml  run_python_2.sh  test.yml  upload-to-raygun.sh
allegro/: CMakeLists.txt
allegro-legacy/: CMakeLists.txt
allegro-legacy/include/: a5alleg.h
allegro-legacy/src/: fsel.c  graphics.c  gui.c  mouse.c
allegro/extra/: alunixac.h
allegro/src/: allegro.c  config.c
api_server/: api_server.py  server.ini  server.py  start.sh
cmake/: CodeCoverage.cmake  SetupCrashpad.cmake
coverage/: index.AST.cpp.dc44717c5a4d78563b271bf09486daaf.html  index.AST.h.288da2e27e35c3882fc66496b611ac4e.html  index.ASTVisitors.cpp.b68a5dab0d1e8f5fc1a1ed54ffcbb018.html  index.ASTVisitors.h.fc1352c882c194becd883f1fc5c8b1c5.html  index.BuildVisitors.cpp.3399a2167f5b649e096edbfe17de165a.html  index.BuildVisitors.h.f430d0a671f93037d62302443effaf8e.html  index.ByteCode.cpp.5740138d328cd88a61c0687394e44f81.html  index.CompileError.cpp.0af6f68da1f90300c58e075971298ddc.html  index.CompileError.h.e6ac5d325b2bd3a168a3acfc48ce9e2a.html  index.CompileError.xtable.c8831605481d179539f56ddc0ee5fee3.html  index.CompileOption.cpp.0f550e353fefa230246e73fa0836e316.html  index.CompileOption.h.f4d55c256945d44886191e39be35a474.html  index.Compiler.h.11f4bbac4c885d50c98ca59ddbf50451.html  index.CompilerUtils.cpp.b2a2689be0b19637d04c64b509424e0a.html  index.CompilerUtils.h.d890af8db3c658ff991ff0370daa764d.html  index.ConsoleLogger.cpp.b4005e880216b7af696cdd908544ff22.html  index.ConsoleLogger.h.187d2c4546569707e2bd17333f0cbc4f.html  index.DataStructs.cpp.bef7f1193317095b615bf8125fe67619.html  index.DataStructs.h.aa872351f81d1f6b6a1a4cb2128c29dd.html  index.EditboxModel.cpp.b213ad6e5e3d969660ab79be5b611d83.html  index.EditboxModel.cpp.dfa1614f9c538abe59be5ae550bc80a3.html  index.EditboxNew.h.47f8d8f1e311d9222a42c3192391fc9b.html  index.EditboxNew.h.77509d873a50ab8064b8ad6da5c10365.html  index.EditboxView.cpp.3275f2999c48e8a2520821e8c6005022.html  index.EditboxView.cpp.d7b8121b2ed7b190eedb102ecf10a48e.html  index.LibrarySymbols.cpp.821173b589c81091253dbba5dc724772.html  index.MetadataVisitor.cpp.0da53fac845f0860e03b3e3b5e908cd8.html  index.MetadataVisitor.h.1855110201925165580d1d85a0ca606e.html  index.ParserHelper.cpp.98c671de0a4f39ef69a6d30c3a60ab8c.html  index.RegistrationVisitor.cpp.9dd7c6df070b8fc5188d2209b811bbda.html  index.RegistrationVisitor.h.aa4f3590a181e1002aaf16e32fc3c729.html  index.ReturnVisitor.cpp.b4343fd6e5329a408a3f50f2f38ab06d.html  index.ReturnVisitor.h.6e80d52b5fffc393e9507bb3a40910a9.html  index.Scope.cpp.c8ee15f71bec3469d4512ec553da745d.html  index.Scope.h.56c587fd10f8cb66f3feed1b29edf78d.html  index.ScriptParser.cpp.39580c7e29f8f44b808a1ca3e983bfcd.html  index.SemanticAnalyzer.cpp.898f354096303599871d1f7fc4c59cb7.html  index.SemanticAnalyzer.h.6e85db96c37352d542d31f1c8f5a70d4.html  index.Types.cpp.0b1c3b08bcab832ef906e05d5d248261.html  index.Types.h.c7dfce959ed20bfa19a08772283c9335.html  (+425 more)
docs/: building.md  project_structure.md  protocol.md  versioning.md
flatpak/: README.md  com.zquestclassic.ZQuest.desktop  com.zquestclassic.ZQuest.metainfo.xml  com.zquestclassic.ZQuest.yml
infra/: README.md  deploy.sh
infra/crontab/: zc
infra/nginx/: lfs.zquestclassic.com.conf
infra/scripts/: sync_github_keys.sh
infra/sshd/: zc-git-lfs.conf
infra/systemd/: zc.api_server.service
lfs_server/: .env.example  docker-compose.yml  giftless.template.yaml  git-lfs-wrapper.sh  git_lfs_authenticate.py
libs/win32dbg/: alleg44-debug.lib
modules/launcher/: LauncherGUI.txt
modules/zelda/: ZeldaCore.txt  ZeldaGUI.txt  ZeldaSubscreen.txt
modules/zquest/: ZQuestCore.txt  ZQuestGUI.txt  ZQuestMisc.txt
modules/zscript/: ParserCore.txt  ParserSrc.txt
output/_auto/: buildpack.bat  buildpack_osx.sh
output/config/: zc.cfg  zc_web.cfg  zcl.cfg  zquest.cfg
packaging/: CMakeLists.txt  generate_mac_bundle_icons.sh  icons.icns
patches/: apply.sh  emscripten.patch
resources/: ag.cfg
resources/base_config/: zc.cfg  zcl.cfg  zquest.cfg
resources/include/: EmilyMisc.zh
scripts/: bisect_builds.py  build_official.py  database.py  generate_changelog.py  generate_protocol.py  generate_qr_constants.py  generate_version_fallback_header.py  generate_version_header.py  generate_zasm_context_strings.py  generate_zscript_api_docs.py  jit_runtime_debug.py  package.py  package_mac.sh  package_web.py  refactor_ffscript.py  replay_uploads.py  replay_uploads_known_good_replays.json  run_target.py  webserver.py  zscript_formatter.py
src/: ConsoleLogger.cpp  EditboxView.cpp  advanced_music.cpp  advanced_music.h  allegro_wrapper.h  combodata.cpp  defdata.h  drawing.cpp  editbox.cpp  emscripten_utils.cpp  emscripten_utils.h  ending.cpp  ffasm.cpp  ffasmexport.cpp  ffasmexport.h  ffc.cpp  ffc.h  ffscript.cpp  ffscript.h  gamedata.cpp  gui.cpp  guys.cpp  guys.h  hero_tiles.cpp  hero_tiles.h  init.cpp  init.h  items.cpp  items.h  iter.h  jwin.cpp  jwinfsel.cpp  link.cpp  maps.cpp  module.cpp  music_playback.cpp  new_subscr.cpp  new_subscr.h  pal.cpp  pal.h  (+61 more)
src/base/: about.cpp  (+46 more)
src/components/sound/: CMakeLists.txt  midi.cpp  midi.h  zcmixer.cpp  zcmixer.h  zcmusic.cpp
tests/: common.py  compare_replays.py  replays.py  run_replay_tests.py  run_test_workflow.py  test_replay_harness.py  test_replays.py  test_updater.py  test_zeditor.py  test_zplayer.py  test_zquest.py  test_zscript.py  test_zscript_database.py  update_snapshots.py
tmp-folder/: playground.qst  playground_prime.zplay
vscode-extension/: README.md  package-lock.json  package.json
web/: CMakeLists.txt  build.js  index.html  main.js  package-lock.json  package.json  settings.js  zasm.js
zscript_language_server/: package.json  zscript.tmLanguage.json
(+1302 files in other folders)
